# TrenchBroom

./: .gitignore  CMakeLists.txt  Log_dev.md  README.md  README.zh_CN.md  TODO  TrenchBroom.code-workspace  trenchbroom-crash-14.txt  vcpkg.json  woking.md  working.md  规则说明.md  项目进程.md
.cursor/rules/: 001-workflow.mdc
.github/workflows/: ci.yml
app/: CMakeLists.txt  PythonExample.cpp  main.cpp
app/Scripts/: test.py
app/cmake/: GenerateManual.cmake
app/resources/documentation/manual/: convert_doc_format.py  convert_menu_format.py  fix_heading_ids.py  index_cn.md  index_cn_f.md  index_cnx.md  translate_markdown.py  translate_markdown_simple.py
app/resources/games/Halflife/: GameConfig.cfg  combined.fgd  cs16lws.fgd  models.fgd  sprites.fgd
app/src/: Main.cpp
common/: CMakeLists.txt
common/src/: Preferences.cpp  Preferences.h  TrenchBroomApp.cpp  TrenchBroomApp.h
common/src/ui/: BoxSelectionTool.cpp  BoxSelectionTool.h  CameraTool3D.cpp  CameraTool3D.h  CurveGenInspector.cpp  CurveGenInspector.h  DrawShapeToolController2D.cpp  DrawShapeToolController2D.h  EntityPropertyEditor.cpp  EntityPropertyModel.cpp  GameDialog.cpp  InfoPanel.cpp  InfoPanel.h  Inspector.cpp  Inspector.h  KeyboardPreferencePane.cpp  KeyboardPreferencePane.h  KeyboardShortcutModel.cpp  KeyboardShortcutModel.h  LanguagePreferencePane.cpp  LanguagePreferencePane.h  LayerListBox.cpp  LayerListBox.h  MapDocument.cpp  MapDocument.h  MapFrame.cpp  MapFrame.h  MapView3D.cpp  MapViewBase.cpp  MapViewBase.h  MaterialBrowser.cpp  MaterialBrowser.h  MaterialBrowserView.cpp  MaterialBrowserView.h  MousePreferencePane.cpp  MousePreferencePane.h  PreferenceDialog.cpp  SelectionTool.cpp  SmartColorEditor.cpp  SmartColorEditor.h  (+11 more)
python_interpreter/: CMakeLists.txt
python_interpreter/PyScripts/: calc.py
python_interpreter/include/python_interpreter/: embeddedmoduleexample.h  pythoninterpreter.h  pythoninterpreterdefines.h
python_interpreter/src/: embeddedmoduleexample.cpp  pythoninterpreter.cpp
translations/: translate_ts.py  translation_zh.ts  translations.qrc  trenchbroom.pro  trenchbroom_zh_CN copy.ts  trenchbroom_zh_CN.qm  trenchbroom_zh_CN.ts
学习进程/: 项目学习.md
学习进程/基础/: Cmake.md
学习进程/基础/common/src/: Color.md
